competitions/hsf-competitions-master/mcpshsf-2020/kube/jekyll-blog.yaml
apiVersion: v1
kind: Service
metadata:
  name: jekyll-blog-svc
  namespace: challenges
  labels:
    app: jekyll-blog
spec:
  type: LoadBalancer
  ports:
  - port: 8000
    targetPort: 80
    protocol: TCP
  selector:
    app: jekyll-blog
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jekyll-blog-svc
  namespace: challenges
  labels:
    app: jekyll-blog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jekyll-blog
  template:
    metadata:
      labels:
        app: jekyll-blog
    spec:
      containers:
      - name: jekyll-blog
        image: jekyll-blog:latest
        ports:
        - containerPort: 80
        imagePullPolicy: Never
        securityContext:
          allowPrivilegeEscalation: false
          runAsUser: 0
      imagePullSecrets:
      - name: regcred
